Fix jumpy navbar and other cosmetics

--- a/themes/initio/static/css/styles.css
+++ b/themes/initio/static/css/styles.css
@@ -275,6 +275,7 @@ a:hover {
 **********************************************************************/
 #head {
   background: #000000 url(../images/di-lambda-uno-v1-laptop.jpg) top center;
+  background-repeat: no-repeat;
   background-size: cover;
   opacity: 0.95;
   padding: 30px 0 35px 0;
@@ -836,7 +837,7 @@ footer.entry-meta .meta-in {
 
 #footer h3.widget-title {
   font-size: 15px;
-//  font-size: 0.9375rem;
+  font-size: 0.9375rem;
   text-transform: uppercase;
   color: #ccc;
   margin: 0 0 20px;
@@ -963,6 +964,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 	display: inline-block;
 	margin: 0;
 	transition: all 0.23s ease-in-out 0s;
+	vertical-align:top;
 	vertical-align:top;
 }
 
